@startuml class-diagram
!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho

title OOADLab - Seminar Management System Class Diagram

' ==================== USER HIERARCHY ====================
package "User Management" {
    class User {
        - userId: String
        - username: String
        - password: String
        - role: String
        --
        + validateCredentials(inputPassword: String): boolean
        + createUserAccount(username, password, role): User
        + createEmptyProfile(): void
        + getUserId(): String
        + getUsername(): String
        + getRole(): String
    }

    class Evaluator {
        - evaluatorId: String
        - isAssigned: boolean
        --
        + getEvaluatorId(): String
        + isAssigned(): boolean
        + setAssigned(assigned: boolean): void
    }

    class Coordinator {
        - coordinatorID: String
        --
        + getCoordinatorId(): String
    }

    class StudentProfile {
        - profileId: String
        - userId: String
        - fullName: String
        - email: String
        - major: String
        --
        + getFullName(): String
        + getEmail(): String
        + getMajor(): String
    }

    User <|-- Evaluator
    User <|-- Coordinator
    User "1" -- "0..1" StudentProfile : has >
}

' ==================== SEMINAR MANAGEMENT ====================
package "Seminar Management" {
    class Seminar {
        - seminarID: String
        - seminarDT: DateAndTime
        - location: String
        - semester: int
        - year: int
        - sessionIDs: List<String>
        --
        + getSessionIDs(): List<String>
        + addSession(sessionID: String): void
        + getSeminarId(): String
        + getSeminarDate(): LocalDate
        + getLocation(): String
    }

    class Session {
        - sessionID: String
        - sessionType: String
        - location: String
        - sessionDT: DateAndTime
        - studentIDs: List<String>
        - evaluatorIds: List<String>
        - evaluatorNames: List<String>
        --
        + addStudent(studentId: String): void
        + addEvaluator(evaluatorId, name): void
        + getSessionID(): String
        + getSessionType(): String
        + getLocation(): String
        + getStudentIDs(): List<String>
        + getEvaluatorIds(): List<String>
    }

    class DateAndTime {
        + date: LocalDate
        + time: LocalTime
    }

    Seminar "1" *-- "0..*" Session : contains >
    Session *-- DateAndTime
    Seminar *-- DateAndTime
}

' ==================== SUBMISSION & EVALUATION ====================
package "Submission & Evaluation" {
    class Submission {
        - submissionId: String
        - seminarId: String
        - studentId: String
        - studentName: String
        - title: String
        - abstractText: String
        - supervisor: String
        - presentationType: String
        - filePath: String
        - deadline: LocalDateTime
        --
        + validateUpload(filePath: String): boolean
        + checkDeadline(): boolean
        + saveFilePath(filePath: String): void
        + saveUpdatedSubmission(title, abstract): void
        + getTitle(): String
        + getPresentationType(): String
    }

    class Evaluation {
        - evaluationId: String
        - submissionId: String
        - evaluatorId: String
        - problemClarity: int
        - methodology: int
        - results: int
        - presentation: int
        - overallScore: int
        - comments: String
        - createdAt: Timestamp
        --
        + setRubricScores(s1, s2, s3, s4): void
        + getOverallScore(): int
        + getComments(): String
        + getTotalScore(): int
    }

    Submission "1" -- "0..1" Evaluation : evaluated by >
    User "1" -- "0..1" Submission : submits >
    Evaluator "1" -- "0..1" Evaluation : creates >
    Seminar "1" -- "0..*" Submission : contains >
}

' ==================== AWARDS & CEREMONY ====================
package "Awards & Ceremony" {
    class Award {
        - awardId: String
        - awardType: String
        - studentId: String
        - studentName: String
        - submissionTitle: String
        - seminarId: String
        - awardDate: LocalDateTime
        - remarks: String
        --
        + getAwardType(): String
        + getStudentName(): String
        + getSubmissionTitle(): String
        + setRemarks(remarks: String): void
    }

    class Ceremony {
        - ceremonyId: String
        - seminarId: String
        - ceremonyName: String
        - scheduledDateTime: LocalDateTime
        - venue: String
        - ceremonyStatus: String
        - awards: List<Award>
        - remarks: String
        --
        + addAward(award: Award): boolean
        + removeAward(awardId: String): boolean
        + getAllAwards(): List<Award>
        + startCeremony(): void
        + completeCeremony(): void
        + cancelCeremony(): void
        + getCeremonyStatus(): String
    }

    Ceremony "1" o-- "0..*" Award : contains >
    User "1" -- "0..*" Award : receives >
    Seminar "1" -- "0..1" Ceremony : has >
}

' ==================== PRESENTATION ====================
package "Presentation" {
    class PresentationBoard {
        - boardId: int
        - boardName: String
        - location: String
        - maxPresentations: int
        - currentPresentations: int
        - sessionId: String
        - presentationType: String
        --
        + getBoardName(): String
        + getLocation(): String
        + isFull(): boolean
        + getSessionId(): String
    }

    class Material {
        - materialId: String
        - submissionId: String
        - fileName: String
        - fileType: String
        - uploadDate: Timestamp
        - filePath: String
        --
        + getFileName(): String
        + getFileType(): String
        + getFilePath(): String
    }

    class PosterPresentation {
        - presentationId: String
        - submissionId: String
        - boardId: int
        --
        + getSubmissionId(): String
        + getBoardId(): int
    }

    Session "1" -- "0..*" PresentationBoard : has >
    Submission "1" -- "0..*" Material : has >
    Submission "1" -- "0..1" PosterPresentation : displayed on >
    PresentationBoard "1" -- "0..*" PosterPresentation : hosts >
}

' ==================== REPORTS ====================
package "Reports" {
    abstract class Report {
        - reportId: String
        - reportType: String
        - generatedDateTime: LocalDateTime
        - content: String
        --
        + exportToFile(): void
        + getReportId(): String
        + getReportType(): String
        + getContent(): String
        # setContent(content: String): void
    }

    class StudentEvaluationReport {
        - studentId: String
        - studentName: String
        - sessionId: String
        - sessionName: String
        - rubricScores: Map<String, Integer>
        - finalAverage: double
        - evaluatorComments: List<String>
        --
        - generateContent(): void
        + getStudentName(): String
        + getFinalAverage(): double
    }

    class SeminarSummaryReport {
        - seminarId: String
        - seminarTitle: String
        - totalStudents: int
        - totalSessions: int
        - overallAverageScore: double
        - awardWinners: List<Award>
        --
        - generateContent(): void
        + getSeminarTitle(): String
        + getTotalStudents(): int
    }

    Report <|-- StudentEvaluationReport
    Report <|-- SeminarSummaryReport
    SeminarSummaryReport "1" o-- "0..*" Award : includes >
}

' ==================== CROSS-PACKAGE RELATIONSHIPS ====================
Session "0..*" -- "0..*" User : assigned to students >
Session "0..*" -- "0..*" Evaluator : assigned to evaluators >
Coordinator "1" -- "0..*" Session : manages >
Coordinator "1" -- "0..*" Report : generates >

@enduml
